--- a/.github/workflows/build-test-report.yml
+++ b/.github/workflows/build-test-report.yml
@@ -25,8 +25,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
+      # Runs the Gradle Build Task
+      - name: Run the Gradle Build
         run: ./gradlew build
 
       # Runs a set of commands using the runners shell
